# IRCbot

./: .gitattributes  .gitignore  .qovery.yml  ChangeLog.md  INSTALL.md  README.md  _config.yml  index.html  ircbot.py  package.json  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  config.yml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  python-publish.yml
bkircbot/: __init__.py  conf.py  ircbot.py
docs/: README.md  config.md  faq.md  getting-started.md
src/: __init__.py  conf.py  ircbot.py
