[metadata]
name = BK_IRCbot
version = 0.1.0
author = Linux Acadamy, Puneet Gopinath
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PuneetGopinath/IRCbot
project_urls =
    Bug Tracker = https://github.com/PuneetGopinath/IRCbot/issues

[options]
package_dir = src
pakages = find:
python_requires = >=3
